[gd_scene load_steps=4 format=3 uid="uid://cxqt3y635o61e"]

[ext_resource type="Script" path="res://Enemies/BasicEnemy/BasicEnemyPathing.gd" id="1_wgpxd"]
[ext_resource type="PackedScene" uid="uid://clr2ermprnh3m" path="res://Enemies/BasicEnemy/BasicEnemy.tscn" id="2_7afy2"]

[sub_resource type="Curve2D" id="Curve2D_dwnog"]
_data = {
"points": PackedVector2Array(10.3826, 18.4055, -10.3826, -18.4055, 274, 41, -15.5739, 14.1581, 15.5739, -14.1581, 284, -49, -22.181, -14.1581, 22.181, 14.1581, 374, -64, -2.83162, -11.7984, 2.83162, 11.7984, 400, -27, 12.7423, -35.3953, -12.7423, 35.3953, 406, 71, 20.7652, 4.71937, -20.7652, -4.71937, 343, 112, 0, 0, 0, 0, 274, 41)
}
point_count = 7

[node name="Patroller" type="Path2D"]
position = Vector2(34, 5)
curve = SubResource("Curve2D_dwnog")
script = ExtResource("1_wgpxd")

[node name="PathFollow2D" type="PathFollow2D" parent="."]
position = Vector2(274, 41)
rotation = -2.0844
rotates = false

[node name="BasicEnemy" parent="PathFollow2D" instance=ExtResource("2_7afy2")]
rotation = 2.0944
spawn_point = Vector2(274, 41)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="PathFollow2D/BasicEnemy"]
path_desired_distance = 10.0
path_max_distance = 200.0
avoidance_enabled = true
radius = 30.0
debug_enabled = true

[connection signal="move_detection_cone" from="." to="PathFollow2D/BasicEnemy" method="move_detection_cone"]
[connection signal="return_to_path" from="." to="PathFollow2D/BasicEnemy" method="_return_to_path"]
[connection signal="arrived_at_path" from="PathFollow2D/BasicEnemy" to="." method="_on_return_to_path"]
[connection signal="player_detected" from="PathFollow2D/BasicEnemy" to="." method="_on_player_detected"]
[connection signal="player_escaped_detection" from="PathFollow2D/BasicEnemy" to="." method="_on_player_escaped_detection"]
